--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,7 @@ redis==5.2.1
 requests==2.32.3
 SQLAlchemy==2.0.38
 uvicorn[standard]==0.34.0
+alembic==1.14.1
+duckdb==1.1.2
+passlib==1.7.4
+bcrypt==4.2.1
