--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,8 @@ requests==2.32.3
 SQLAlchemy==2.0.38
 uvicorn[standard]==0.34.0
 alembic==1.14.1
-duckdb==1.1.2
 passlib==1.7.4
 bcrypt==4.2.1
 aiokafka==0.12.0
 pycryptodome==3.21.0
+geoip2==5.0.1
