--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,12 +24,17 @@ sqlalchemy = "2.0.38"
 uvicorn = {version = "0.34.0", extras = ["standard"]}
 alembic = "1.14.1"
 passlib = "1.7.4"
-bcrypt = "4.2.1"
+bcrypt = "4.0.1"
 aiokafka = "0.12.0"
 pycryptodome = "3.21.0"
 geoip2 = "5.0.1"
 ipython = "8.33.0"
 pre-commit = "4.1.0"
+pytest = "8.3.5"
+httpx = {extras = ["http2"], version = "^0.28.1"}
+asgi-lifespan = "^2.1.0"
+pytest-asyncio = "^0.26.0"
+aiosqlite = "^0.21.0"
 
 [tool.black]
 line-length = 119
