--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,13 @@ SQLAlchemy==2.0.38
 uvicorn[standard]==0.34.0
 alembic==1.14.1
 passlib==1.7.4
-bcrypt==4.2.1
+bcrypt==4.0.1
 aiokafka==0.12.0
 pycryptodome==3.21.0
 geoip2==5.0.1
 ipython==8.33.0
 pre-commit==4.1.0
+pytest==8.3.5
+httpx[http2]==0.28.1
+pytest-asyncio==0.26.0
+aiosqlite==0.21.0
